--- a/SQL_Database_Agents.ipynb
+++ b/SQL_Database_Agents.ipynb
@@ -764,7 +764,7 @@
       "source": [
         "from langchain_groq import ChatGroq\n",
         "import os\n",
-        "os.environ[\"GROQ_API_KEY\"] = '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'\n",
+        "os.environ[\"GROQ_API_KEY\"] = ''\n",
         "llm = ChatGroq(model = 'llama3-70b-8192')"
       ],
       "metadata": {
